--- a/09 - Dev Tools Domination/index-START.html
+++ b/09 - Dev Tools Domination/index-START.html
@@ -18,29 +18,50 @@
     }
 
     // Regular
-
+    console.log("Hello world!")
     // Interpolated
 
     // Styled
-
+    console.log('%c I am some great text', 'font-size: 25px; background: black;')
     // warning!
-
+    console.warn("Oh NO!")
     // Error :|
-
+    console.log('CRAP')
     // Info
-
+    console.info('Drugs are bad for you.')
     // Testing
+    const p = document.querySelector('p');
 
+    console.assert(p.classList.contains('ouch'), 'That is wrong!')
     // clearing
-
+    console.clear();
     // Viewing DOM Elements
+    console.log(p);
+    console.dir(p);
 
+    console.clear()
     // Grouping together
-
+    dogs.forEach(dog => {
+      console.group(`${dog.name}`);
+      console.log(`${dog.name} is ${dog.age} years old.`);  
+      console.log(`${dog.name} is ${dog.age * 7} dog years old.`);
+      console.groupEnd(`${dog.name}`);
+    });
     // counting
-
+    console.count('hi');
+    console.count('hi');
+    console.count('hiya');
+    console.count('hi');
+    console.count('hiya');
+    console.count('hilo');
     // timing
-
+    console.time('fetching data');
+    fetch('https://api.github.com/users/radicalkidd')
+      .then(data => data.json())
+      .then(data => {
+        console.timeEnd('fetching data');
+        console.log(data);
+      });
   </script>
 </body>
 </html>
